Version 4/space-mission.yaml
apiVersion: v1
kind: Pod
metadata:
  name: counter-pod
  labels:
    app: counter
spec:
  containers:
  - name: main-app
    image: localhost/space-counter:latest # Immagine che creeremo
    imagePullPolicy: Never
    securityContext:
      privileged: true
  nodeName: minikube # Forziamo il nodo per semplicità
