Version 4/system-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: system-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: system-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: system-redis
  template:
    metadata:
      labels:
        app: system-redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
