Version 4/space-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-ingress
  annotations:
    # Riscrive il path per evitare errori 404 se l'app si aspetta la root
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # FONDAMENTALE: Dice a Kubernetes di usare il controller NGINX
  ingressClassName: nginx
  rules:
  - host: mission-control.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # QUESTO NOME DEVE ESSERE IDENTICO A QUELLO IN space-mission.yaml
            name: space-mission-service 
            port:
              # QUESTA PORTA DEVE ESSERE QUELLA ESPOSTA DAL SERVICE
              number: 80
